<resources>
    <string name="app_name">Eventrra</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_purchase">Purchase</string>
    <string name="tab_title_all">All</string>
    <string name="tab_title_for_you">For You</string>
    <string name="tab_title_this_weekend">This Weekend</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="event_editor">Event Editor</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="enter_here">Enter here</string>
    <string name="about">About</string>
    <string name="event_title">Event Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="not_set">Not Set</string>
    <string name="save">Save</string>
    <string name="from_not_set">From(Not Set)</string>
    <string name="to_not_set">To(Not Set)</string>
    <string name="date_not_set">Date(Not Set)</string>
    <string name="register">Register</string>
    <string name="number_of_ticket">Number of ticket</string>
    <string name="note">* Note: Please arrive 1 hour before the event start. If it does not come, it will be canceled.</string>
    <string name="next">Next</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="invoice_id">Invoice ID</string>
    <string name="date">Date</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="done">Done</string>
    <string name="price_for_one_ticket">Price(for one ticket)</string>
    <string name="options">Options</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_location_map">Add location map</string>
    <string name="place">Place</string>
</resources>
