<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/options" />

            <TextView
                android:id="@+id/tv_edit"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_edit_black_24dp"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/edit" />

            <TextView
                android:id="@+id/tv_delete"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delete_black_24dp"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/delete" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
