<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        style="@style/Widget.AppCompat.ButtonBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:onClick="close"
                        android:src="@drawable/ic_close_black_24dp" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/sign_up" />

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/rounded_btn_bg"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>
